python/ql/test/3/query-tests/Imports/syntax_error/SyntaxError.qlref
query: Imports/SyntaxError.ql
postprocess: utils/test/InlineExpectationsTestQuery.ql
